index.css
html,
body {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  background: linear-gradient(89deg, #666699 0%, #6666FF 100%); /* w3c */
}

.main {
  margin-top: 2rem;
  margin-bottom: auto;
  margin-left: auto;
  margin-right: auto;
}

.buttons {
  width: 200px;
  margin-top: 2rem;
  margin-bottom: auto;
  margin-left: 1rem;
  margin-right: 1rem;
}

.log {
  width: 400px;
  margin-top: 2rem;
  margin-bottom: auto;
  margin-left: 1rem;
  margin-right: 1rem;
}

